; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_nvram.c_nvram_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/char/extr_nvram.c_nvram_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }

@nvram_state_lock = common dso_local global i32 0, align 4
@nvram_open_cnt = common dso_local global i32 0, align 4
@nvram_open_mode = common dso_local global i32 0, align 4
@NVRAM_EXCL = common dso_local global i32 0, align 4
@FMODE_WRITE = common dso_local global i32 0, align 4
@NVRAM_WRITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @nvram_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nvram_release(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %5 = call i32 @spin_lock(i32* @nvram_state_lock)
  %6 = load i32, i32* @nvram_open_cnt, align 4
  %7 = add nsw i32 %6, -1
  store i32 %7, i32* @nvram_open_cnt, align 4
  %8 = load i32, i32* @nvram_open_mode, align 4
  %9 = load i32, i32* @NVRAM_EXCL, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %2
  %13 = load i32, i32* @NVRAM_EXCL, align 4
  %14 = xor i32 %13, -1
  %15 = load i32, i32* @nvram_open_mode, align 4
  %16 = and i32 %15, %14
  store i32 %16, i32* @nvram_open_mode, align 4
  br label %17

17:                                               ; preds = %12, %2
  %18 = load %struct.file*, %struct.file** %4, align 8
  %19 = getelementptr inbounds %struct.file, %struct.file* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @FMODE_WRITE, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %17
  %25 = load i32, i32* @NVRAM_WRITE, align 4
  %26 = xor i32 %25, -1
  %27 = load i32, i32* @nvram_open_mode, align 4
  %28 = and i32 %27, %26
  store i32 %28, i32* @nvram_open_mode, align 4
  br label %29

29:                                               ; preds = %24, %17
  %30 = call i32 @spin_unlock(i32* @nvram_state_lock)
  ret i32 0
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
